[package]
name = "gas-prediction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rustlearn = "0.5.0"
ndarray = "0.15.3"
ndarray-linalg = "0.16.0"
linfa = "0.6.1"